--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -40,18 +40,39 @@
           {{ total_comments }}</strong>
         {% endwith %}
       </div>
-
-
-
-      <!-- Post details column -->
     </div>
+
+
+    <!-- Post details column -->
+
     <div class="col-lg-6 col-md-6 col-sm-12 text-right">
-      <h1 class="post-title">{{ post.title }}</h1>
-      <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
-      <hr>
-      <p>{{ post.prompt | safe }}</p>
-      <p>{{ post.negprompt | safe }}</p>
-      <p>{{ post.method | safe }}</p>
+
+      <div class="card" id="text-card">
+        <div class="card-header bg-dark">
+          <h1 class="card-title">{{ post.title }}</h1>
+          <p class="card-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+        </div>
+        <div class="card-body">
+          <div class="promptdiv list-group-item">
+            <h5 class="card-title">Prompt</h5>
+            <div class="card-text card-elements">
+              <p id="prompt-text" onclick="copyToClipboard()">{{ post.prompt | safe }}</p>
+            </div>
+          </div>
+          <div class="negpromptdiv list-group-item">
+            <h5 class="card-title">Negprompt</h5>
+            <div class="card-text card-elements">
+              <p id="prompt-text" onclick="copyToClipboard()">{{ post.negprompt | safe }}</p>
+            </div>
+          </div>
+          <div class="methoddiv list-group-item">
+            <h5 class="card-title">Method</h5>
+            <div class="card-text card-elements">
+              <p id="prompt-text" onclick="copyToClipboard()">{{ post.method | safe }}</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -98,4 +119,6 @@
   </div>
 </div>
 </div>
+<script src="../static/js/script.js"></script>
+
 {% endblock main %}
