--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -6,6 +6,7 @@
 <!-- main image column -->
 <div class="container-fluid">
   <div class="row d-flex">
+
     <div class="col-lg-6 col-md-6 col-sm-12">
       <div class="post-image">
         {% if "placeholder" in post.featured_image.url %}
@@ -16,6 +17,7 @@
       </div>
 
       <div class="col-1">
+
         <strong>
           {% if user.is_authenticated %}
           <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
@@ -28,52 +30,63 @@
                 class="far fa-heart"></i></button>
             {% endif %}
           </form>
+
           {% else %}
           <span class="text-secondary"><i class="far fa-heart"></i></span>
           {% endif %}
           <span class="text-secondary">{{ post.number_of_likes }} </span>
         </strong>
+
       </div>
+
       <div class="col-1">
         {% with comments.count as total_comments %}
         <strong class="text-secondary"><i class="far fa-comments"></i>
           {{ total_comments }}</strong>
         {% endwith %}
       </div>
+
     </div>
 
-
     <!-- Post details column -->
-
     <div class="col-lg-6 col-md-6 col-sm-12 text-right">
 
       <div class="card" id="text-card">
+
         <div class="card-header bg-dark">
           <h1 class="card-title">{{ post.title }}</h1>
-          <p class="card-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+          <p class="card-subtitle">CREATED BY: {{ post.author }} | ON: {{ post.created_on }}</p>
         </div>
+
         <div class="card-body">
+
           <div class="promptdiv list-group-item">
-            <h5 class="card-title">Prompt</h5>
+            <h5 class="card-title">Prompt:</h5>
             <div class="card-text card-elements">
               <p id="prompt-text" onclick="copyToClipboard()">{{ post.prompt | safe }}</p>
             </div>
           </div>
+
           <div class="negpromptdiv list-group-item">
-            <h5 class="card-title">Negprompt</h5>
+            <h5 class="card-title">Negative prompt:</h5>
             <div class="card-text card-elements">
-              <p id="prompt-text" onclick="copyToClipboard()">{{ post.negprompt | safe }}</p>
+              <p id="negprompt-text" onclick="copyToClipboard()">{{ post.negprompt | safe}}</p>
             </div>
           </div>
+
           <div class="methoddiv list-group-item">
-            <h5 class="card-title">Method</h5>
+            <h5 class="card-title">Method:</h5>
             <div class="card-text card-elements">
-              <p id="prompt-text" onclick="copyToClipboard()">{{ post.method | safe }}</p>
+              <p id="method-text" onclick="copyToClipboard()">{{ post.method | safe }}</p>
             </div>
           </div>
+
         </div>
+
       </div>
+
     </div>
+
   </div>
 </div>
 
