--- a/templates/account.html
+++ b/templates/account.html
@@ -13,10 +13,10 @@
   <div class="container-fluid">
     <p>POST LIST:</p>
   </div>
-  <div class="container-fluid">
-    <div class="row justify-content-center no-gutters">
+  <div class="masonry-container">
+    <div class="masonry-columns">
       {% for post in post_list %}
-      <div id="card-container">
+      <div id="card-container masonry-brick">
         <div class="d-flex justify-content-center">
 
           <div class="card img-card-acc h-100">
