--- a/templates/image_post.html
+++ b/templates/image_post.html
@@ -15,37 +15,6 @@
         <img src=" {{ post.featured_image.url }}" class="img-fluid">
         {% endif %}
       </div>
-
-      <div class="col-1">
-
-        <strong>
-          {% if user.is_authenticated %}
-          <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
-            {% csrf_token %}
-            {% if liked %}
-            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
-                class="fas fa-heart"></i></button>
-            {% else %}
-            <button type="submit" name="blogpost_id" value="{{post.slug}}" class="btn-like"><i
-                class="far fa-heart"></i></button>
-            {% endif %}
-          </form>
-
-          {% else %}
-          <span class="text-secondary"><i class="far fa-heart"></i></span>
-          {% endif %}
-          <span class="text-secondary">{{ post.number_of_likes }} </span>
-        </strong>
-
-      </div>
-
-      <div class="col-1">
-        {% with comments.count as total_comments %}
-        <strong class="text-secondary"><i class="far fa-comments"></i>
-          {{ total_comments }}</strong>
-        {% endwith %}
-      </div>
-
     </div>
 
     <!-- Post details column -->
@@ -53,7 +22,7 @@
 
       <div class="card" id="text-card">
 
-        <div class="card-header bg-dark">
+        <div class="card-header">
           <h1 class="card-title">{{ post.title }}</h1>
           <p class="card-subtitle">CREATED BY: {{ post.author }} | ON: {{ post.created_on }}</p>
         </div>
@@ -61,21 +30,21 @@
         <div class="card-body">
 
           <div class="promptdiv list-group-item">
-            <h5 class="card-title">Prompt:</h5>
+            <h5 class="card-title">PROMPT:</h5>
             <div class="card-text card-elements">
               <p id="prompt-text" onclick="copyToClipboard()">{{ post.prompt | safe }}</p>
             </div>
           </div>
 
           <div class="negpromptdiv list-group-item">
-            <h5 class="card-title">Negative prompt:</h5>
+            <h5 class="card-title">NEGATIVE PROMPT:</h5>
             <div class="card-text card-elements">
               <p id="negprompt-text" onclick="copyToClipboard()">{{ post.negprompt | safe}}</p>
             </div>
           </div>
 
           <div class="methoddiv list-group-item">
-            <h5 class="card-title">Method:</h5>
+            <h5 class="card-title">METHOD:</h5>
             <div class="card-text card-elements">
               <p id="method-text" onclick="copyToClipboard()">{{ post.method | safe }}</p>
             </div>
@@ -109,29 +78,60 @@
         </div>
       </div>
       {% empty %}
-      <p>No comments yet.</p>
+      <p>COMMENT ON MY ART...</p>
       {% endfor %}
 
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-12 text-right">
-      <div class="card-body">
-        <!-- comment section form -->
+      <div class="row justify-content-end">
 
-        {% if user.is_authenticated %}
-        <h3>Leave a comment:</h3>
-        <p>Posting as: {{ user.username }}</p>
-        <form method="post" style="margin-top: 1.3em;">
-          {{ comment_form | crispy }}
-          {% csrf_token %}
-          <button type="submit" class="btn btn-warning">Submit</button>
-        </form>
-        {% endif %}
+          <div style="margin-right: 15px;">
+            {% if user.is_authenticated %}
+            <form class="d-inline" action="{% url 'post_like' post.slug %}" method="POST">
+              {% csrf_token %}
+              {% if liked %}
+              <button type="submit" name="blogpost_id" value="{{ post.slug }}" class="btn-like"><i
+                  class="fas fa-heart"></i></button>
+              {% else %}
+              <button type="submit" name="blogpost_id" value="{{ post.slug }}" class="btn-like"><i
+                  class="far fa-heart"></i></button>
+              {% endif %}
+            </form>
+            {% else %}
+            <span><i class="far fa-heart"></i></span>
+            {% endif %}
+            <span>{{ post.number_of_likes }}</span>
+          </div>
+
+          <div style="margin-top: 3px; margin-right: 10px;">
+            <span><i class="far fa-comments"></i></span><span style="padding-left: 10px;">{{ comments.count }}</span>
+          </div>
+
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="card-body">
+          <!-- comment section form -->
+
+          {% if user.is_authenticated %}
+          <h3>LEAVE A COMMENT:</h3>
+          <p>Posting as: {{ user.username }}</p>
+          <form method="post" style="margin-top: 1.3em;">
+            {{ comment_form | crispy }}
+            {% csrf_token %}
+            <button type="submit" class="btn btn-warning">Submit</button>
+          </form>
+          {% endif %}
+        </div>
       </div>
     </div>
   </div>
+
 </div>
-</div>
+
 <script src="../static/js/script.js"></script>
 
 {% endblock main %}
