--- a/static/css/style.css
+++ b/static/css/style.css
@@ -161,6 +161,7 @@ section {
     color: rgb(207, 207, 207);
     margin: 4px;
 	text-transform: uppercase;
+	font-size: small;
 }
 
 .gallery-likes {
@@ -169,9 +170,9 @@ section {
 	margin-right: 5px;
   }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1200px) {
 	.card-text:last-child {
-		font-size: x-small;
+		font-size: small;
 	}
 	.author {
 		font-size: small;
@@ -316,4 +317,38 @@ section {
 .btn-like .fa-heart {
 	font-size: large;
 	color: #ffffff;
+}
+
+#comment-card {
+	background-color: #292b2c;
+	border-radius: 0;
+	margin-right: 3%;
+}
+
+#comment-card .card-header, #comment-card h3 {
+	color: #f0ad4e;
+}
+
+#comment-card .textarea {
+	border: 0;
+	background-color: #6b6b6b;
+	color: #000;
+	font-size: large;
+}
+
+@media only screen and (max-width: 640px) {
+	#comment-card {
+		margin: 0 1.5rem;
+	}
+  }
+
+/* Create post styles */
+
+.create-post-div h4, .requiredField {
+	color: #f0ad4e;
+	text-transform: uppercase;
+}
+
+.create-post-div .textarea {
+	height: 6.5rem;
 }
