--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -5,8 +5,8 @@
 {% if user.is_authenticated %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-4">
-            <h4>Submit new post:</h4>
+        <div class="col-md-6 create-post-div">
+            <h4>SUBMIT NEW POST:</h4>
             <p>Posting as: {{ user.username }}</p>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -19,6 +19,9 @@
                 {% endif %}
                 <button type="submit" class="btn btn-signup btn-lg">Submit</button>
             </form>
+        </div>
+        <div class="col-md-4">
+            SOME MORE CONTENT
         </div>
     </div>
 </div>
