--- a/templates/index.html
+++ b/templates/index.html
@@ -28,28 +28,28 @@
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
+          <div class="col-md-4 service-pad"><span class="fa-stack fa-3x service-icons"><i
                 class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-solid fa-palette fa-stack-1x fa-inverse"></i></span>
-            <h4 class="section-heading">Post</h4>
-            <p class="text-muted">. Our community is dedicated to exploring
+            <h4 class="section-heading text-uppercase">Showcase</h4>
+            <p class="text-muted text-left">Our community is dedicated to exploring
               the creative possibilities of machine learning algorithms, and we encourage artists of all levels to join
               us.</p>
           </div>
-          <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
+          <div class="col-md-4 service-pad"><span class="fa-stack fa-3x service-icons"><i
                 class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-solid fa-comment fa-stack-1x fa-inverse"></i></span>
-            <h4 class="section-heading">Comment</h4>
+            <h4 class="section-heading text-uppercase">Comment</h4>
             <p class="text-muted">Each post features an image, title, prompt, negative prompt, and method, providing a
               glimpse into the creative process
               behind the art. Members can like, unlike, and comment on each other's posts, providing feedback and
               inspiration to one another.</p>
           </div>
-          <div class="col-md-4"><span class="fa-stack fa-3x service-icons"><i
+          <div class="col-md-4 service-pad"><span class="fa-stack fa-3x service-icons"><i
                 class="fa fa-circle fa-stack-2x" id="text-primary"></i><i
                 class="fa fa-laptop fa-stack-1x fa-inverse"></i></span>
-            <h4 class="section-heading">Expand</h4>
-            <p class="text-muted">Your mind, to join our community, simply click the 'Account' button and sign up for an
+            <h4 class="section-heading text-uppercase">Expand</h4>
+            <p class="text-muted text-right">Your mind, to join our community, simply click the 'Account' button and sign up for an
               account. Please note that access to the site
               is prohibited without signing up. We look forward to seeing your AI art!</p>
           </div>
