--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,9 +115,10 @@ section {
 .img-card {
 	max-width: 300px;
 	border: none;
-	transform: translateY(100%);
 	opacity: 0;
-	transition: 200ms;
+	-webkit-animation: slide-in-blurred-bottom 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+	animation: slide-in-blurred-bottom 0.4s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+	animation-play-state: paused;
 }
 
 .img-card-acc {
@@ -126,7 +127,6 @@ section {
 }
 
 .img-card.show {
-	transform: translateY(0);
 	opacity: 1;
 }
 
@@ -191,6 +191,48 @@ section {
 	}
   }
 
+/* card animation */
+@-webkit-keyframes slide-in-blurred-bottom {
+	0% {
+	  -webkit-transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
+			  transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
+	  -webkit-transform-origin: 50% 100%;
+			  transform-origin: 50% 100%;
+	  -webkit-filter: blur(40px);
+			  filter: blur(40px);
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+			  transform: translateY(0) scaleY(1) scaleX(1);
+	  -webkit-transform-origin: 50% 50%;
+			  transform-origin: 50% 50%;
+	  -webkit-filter: blur(0);
+			  filter: blur(0);
+	  opacity: 1;
+	}
+  }
+  @keyframes slide-in-blurred-bottom {
+	0% {
+	  -webkit-transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
+			  transform: translateY(1000px) scaleY(2.5) scaleX(0.2);
+	  -webkit-transform-origin: 50% 100%;
+			  transform-origin: 50% 100%;
+	  -webkit-filter: blur(40px);
+			  filter: blur(40px);
+	  opacity: 0;
+	}
+	100% {
+	  -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+			  transform: translateY(0) scaleY(1) scaleX(1);
+	  -webkit-transform-origin: 50% 50%;
+			  transform-origin: 50% 50%;
+	  -webkit-filter: blur(0);
+			  filter: blur(0);
+	  opacity: 1;
+	}
+  }
+
 /* services */
 
 .service-row {
@@ -239,8 +281,9 @@ section {
 	--column-count-small: 2;
 	--column-count-medium: 3;
 	--column-count-large: 4;
-	--column-count-xlarge: 7;
-	--column-gap: 0.125rem;
+	--column-count-xlarge: 6;
+	--column-count-xxlarge: 7;
+	--column-gap: 0.15rem;
 	padding: var(--column-gap);
   }
   
@@ -272,6 +315,13 @@ section {
 	  column-width: calc(1 / var(--column-count-xlarge) * 100%);
 	}
   }
+
+  @media only screen and (min-width: 1800px) {
+	.masonry-columns {
+	  column-count: var(--column-count-xxlarge);
+	  column-width: calc(1 / var(--column-count-xlarge) * 100%);
+	}
+  }
   
   /* Bricks */
   .masonry-brick {
@@ -285,7 +335,7 @@ section {
 	margin: 0 0 var(--column-gap);
   }
 
-  /* post detail style */
+/* post detail style */
 
 .post-image {
 	margin-top: 2.5%;
