--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,13 @@
   {% endblock main %}
 
   {% else %}
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Fluid jumbotron</h1>
-      <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  <div class="jumbotron jumbotron-fluid d-flex align-items-center">
+    <div class="container text-center">
+      <h1 class="display-4">Welcome to the Promptiverse</h1>
+      <p class="lead mb-4">Discover AI-generated art and creativity at its finest.</p>
+      <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">
+        Learn More
+      </button>
     </div>
   </div>
   
