--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,10 +8,10 @@
     <div class="ml-auto">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+          <a class="nav-link text-uppercase" href="{% url 'account_logout' %}">Logout</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_posts' %}">Account</a>
+          <a class="nav-link text-uppercase" href="{% url 'account_posts' %}">Account</a>
         </li>
       </ul>
     </div>
@@ -22,10 +22,10 @@
       <div class="mr-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link sub-nav-links" href="{% url 'home' %}">Gallery</a>
+            <a class="nav-link sub-nav-links text-uppercase" href="{% url 'home' %}">Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link sub-nav-links" href="{% url 'create_post' %}">Submit</a>
+            <a class="nav-link sub-nav-links text-uppercase" href="{% url 'create_post' %}">Submit</a>
           </li>
         </ul>
       </div>
@@ -43,10 +43,10 @@
       <div class="ml-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+            <a class="nav-link text-uppercase" href="{% url 'account_login' %}">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'account_signup' %}">Signup</a>
+            <a class="nav-link text-uppercase" href="{% url 'account_signup' %}">Signup</a>
           </li>
         </ul>
       </div>
