--- a/templates/post_update.html
+++ b/templates/post_update.html
@@ -1,6 +1,7 @@
 {% extends "index.html" %}
 {% block main %}
 
+<!-- retrieves data from our view to populate a form with existing post data -->
 <h1>Update Post: {{ post.title }}</h1>
 
 <form method="post">
