--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,7 +57,7 @@ hr {
 /* Jumbotron */
 
 .jumbotron {
-	background-image: url("../testimages/TestHero.png");
+	background-image: url("");
 	background-repeat: no-repeat;
 	background-position: center;
 	height: 700px;
@@ -129,6 +129,14 @@ section {
 .img-card.show {
 	opacity: 1;
 }
+
+#img-spacer {
+	padding-top: 6px;
+}
+
+#img-spacer:hover {
+	filter: brightness(120%);
+  }
 
 .image-overlay {
     position: absolute;
@@ -283,7 +291,7 @@ section {
 	--column-count-large: 4;
 	--column-count-xlarge: 6;
 	--column-count-xxlarge: 7;
-	--column-gap: 0.15rem;
+	--column-gap: 0.4rem;
 	padding: var(--column-gap);
   }
   
@@ -421,4 +429,24 @@ section {
 
 .create-post-div .textarea {
 	height: 6.5rem;
+}
+
+/* Modal */
+
+.modal-title {
+	font-family: 'Julius Sans One', sans-serif;
+	color: #f0ad4e;
+}
+  
+.modal-text {
+	font-family: 'Poppins', sans-serif;
+	font-size: 0.9rem;
+}
+
+.modal-content p:nth-child(2) {
+	margin-top: 35px;
+}
+
+.modal-content {
+	padding: 25px;
 }
