--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -2,14 +2,43 @@
 {% load crispy_forms_tags %}
 
 {% block main %}
+
 <!-- Authenticated user check -->
 {% if user.is_authenticated %}
-<!-- form to allow user submission of artwork and prompts -->
 <div class="container">
     <div class="row justify-content-center">
+
+        <!-- post instructions section -->
+        <div class="col-md-4">
+            <div class="card" id="submit-card">
+                <div class="card-header text-uppercase">
+                    <h5>Post instructions:</h2>
+                </div>
+                <div class="card-body" id="submit-rules-body">
+                    <p>RULES:</p>
+                    <ol>
+                        <li>Do not post any offensive or inappropriate images.</li>
+                        <li>All images require validation by an admin before they can go live on the platform.</li>
+                        <li>Do not post any harmful or illegal content.</li>
+                        <li>Always include the prompt information in your post. Do not post non prompt information in this field.</li>
+                        <li>Include only negative prompt information if applicable. Where none exists enter 'None'.</li>
+                        <li>Provide a brief description of the technology used and any post-processing that was done to the image. 
+                            This will help other users understand how you created the image and can be useful for educational purposes</li>
+                    </ol>
+                    <p>Remember that failure to comply with these instructions may result in your post being removed and/or your account being 
+                        suspended or terminated. Thank you for your cooperation and for helping to keep our platform safe and respectful for everyone.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- form to allow user submission of artwork and prompts -->
         <div class="col-md-6 create-post-div">
-            <h4>SUBMIT NEW POST:</h4>
-            <p>Posting as: {{ user.username }}</p>
+            <div class="card" id="submit-card">
+                <div class="card-header text-uppercase">
+                    <h5>submit new post:</h2>
+                </div>
+            </div>
+            
             <!-- form is built from our submission view -->
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
@@ -17,25 +46,15 @@
 
                 <!-- displays an alert if user submits form with errors -->
                 {% if submit_form.featured_image.errors %}
-                    {% for error in submit_form.featured_image.errors %}
-                        <div class="alert alert-danger">{{ error }}</div>
-                    {% endfor %}
+                {% for error in submit_form.featured_image.errors %}
+                <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
                 {% endif %}
                 <button type="submit" class="btn btn-signup btn-lg">Submit</button>
             </form>
         </div>
-        <div class="col-md-4">
-            <div class="card mb-3" id="comment-card">
-                <div class="card-header text-uppercase">
-                    Heading
-                </div>
-                <div class="card-body">
-                    Body
-                </div>
-              </div>
-        </div>
+
     </div>
 </div>
 {% endif %}
 {% endblock main %}
-
