--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -50,7 +50,7 @@
                 <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
                 {% endif %}
-                <button type="submit" class="btn btn-signup btn-lg">Submit</button>
+                <button type="submit" class="btn btn-signup btn-lg btn-warning">Submit</button>
             </form>
         </div>
 
