--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
           <p class="modal-text">The process of creating AI art involves feeding the AI system with input data and letting it generate a new output based on the learned patterns. 
             The generated output can then be refined or altered by a human artist to create a final piece of art.</p>
-          <p class="modal-text">Remember be respectful and constructive. Go to the Signup link to start viewing & posting..</p>
+          <p class="modal-text">Remember be respectful and constructive. Go to the Signup link to start viewing & posting!</p>
           <div class="modal-btn">
           <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
         </div>
