--- a/templates/nav.html
+++ b/templates/nav.html
@@ -45,7 +45,7 @@
   <header>
 
     <nav class="navbar bg-dark navbar-items">
-      <a class="navbar-brand" href="#">Promptiverse</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Promptiverse</a>
       <div class="ml-auto">
         <ul class="navbar-nav">
           <li class="nav-item">
