change js filepath to external

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,5 +30,7 @@
 <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 <script src="https://kit.fontawesome.com/9cb253b564.js" crossorigin="anonymous"></script>
+<!-- Custom script loader for intersection observer & text copy functions -->
+<script src="{% static 'js/script.js' %}"></script>
 
 </html>
