alter login/signup pages to include nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 </head>
 
 <body class="bg-dark">
+  <!-- Navbar loads here unsing include -->
+{% include 'nav.html' %}
 
   <!-- main site content loads here -->
   {% block index %}
