--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+<!-- Navbar loads here unsing include -->
+{% include 'nav.html' %}
 
 {% load i18n %}
 {% load account socialaccount %}
@@ -9,8 +11,10 @@
 
 
 <div class="container-fluid">
+  <hr>
   <div class="row d-flex justify-content-center">
     <div class="mt-3">
+      
       <h2>{% trans "SIGN IN" %}</h2>
 
       <p>{% blocktrans %}<a href="{{ signup_url }}" class="acnt-forms">SIGN UP</a> To view or comment on posts!{% endblocktrans %}</p>
